Fix Scrollbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -225,7 +225,7 @@ footer a {
     
     body {
             background-size: auto;
-            overflow: hidden;
+            overflow-x: hidden;
     }
     
     header {
